bug-191 Alignment issue on all modules updated

--- a/public/sximo/css/sximo.css
+++ b/public/sximo/css/sximo.css
@@ -3516,9 +3516,9 @@ li.multiselect-item.multiselect-group + li a label {
 }
 */
 select#col-config{
-  left: 2px !important;
-  top: 0px !important;
-  margin-right:2px;
+  /*left: 2px !important;  */
+    /*top: 0px !important;*/
+  /*margin-right:2px;*/
 }
 /* for FireFox*/
 @-moz-document url-prefix() {
@@ -3533,4 +3533,49 @@ select#col-config{
 
     -webkit-border-radius: 0px;
   }
+}
+/*
+.sbox-content .row.c-margin .col-md-9 a,
+.sbox-content .row.c-margin .col-md-9 select,
+.sbox-content .row.c-margin .col-md-9 button,
+.sbox-content .row.c-margin .col-md-8 a,
+.sbox-content .row.c-margin .col-md-8 select,
+.sbox-content .row.c-margin .col-md-8 button{
+
+    margin:0px !important;
+    left: 0px !important;
+    top: 0px !important;
+    margin-right:3px !important;
+    margin-left:0px !important;
+    margin-bottom: 3px !important;
+}
+.sbox-content .row.c-margin .col-md-4 a,
+.sbox-content .row.c-margin .col-md-4 button,
+.sbox-content .row.c-margin .col-md-3 a,
+.sbox-content .row.c-margin .col-md-3 button{
+
+    margin:0px !important;
+    left: 0px !important;
+    top: 0px !important;
+    margin-right:0px !important;
+    margin-left:3px !important;
+    margin-bottom: 3px !important;
+}*/
+.alignment-left-fixed{
+
+    margin:0px !important;
+    left: 0px !important;
+    top: 0px !important;
+    margin-right:3px !important;
+    margin-left:0px !important;
+    margin-bottom: 3px !important;
+}
+.alignment-right-fixed{
+
+    margin:0px !important;
+    left: 0px !important;
+    top: 0px !important;
+    margin-right:0px !important;
+    margin-left:3px !important;
+    margin-bottom: 3px !important;
 }
